--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "mongoose": "^4.3.2",
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.7",
-    "sendgrid": "sendgrid/sendgrid-nodejs"
+    "sendgrid": "2.0.0"
   }
 }
